--- a/package.json
+++ b/package.json
@@ -21,15 +21,21 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.2.0",
+    "next-redux-wrapper": "^6.0.2",
     "prettier": "^2.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.4",
+    "redux": "^4.1.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "@types/redux": "^3.6.0",
     "@types/styled-components": "^5.1.9",
     "babel-eslint": "^10.1.0",
     "babel-plugin-styled-components": "^1.12.0",
