--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
+    "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -31,6 +33,7 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4"
   },
