--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "storybook-addon-styled-component-theme": "^2.0.0",
     "typescript": "^4.2.4"
   }
 }
