--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
     "@storybook/react": "^6.2.9",
+    "@testing-library/jest-dom": "^5.12.0",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/redux": "^3.6.0",
