--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
@@ -26,6 +26,7 @@
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
     "next": "10.2.0",
+    "next-page-tester": "^0.25.0",
     "next-redux-wrapper": "^6.0.2",
     "prettier": "^2.3.0",
     "react": "17.0.2",
@@ -47,6 +48,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
+    "@types/enzyme": "^3.10.8",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/redux": "^3.6.0",
@@ -54,8 +56,15 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "enzyme": "^3.11.0",
     "jest": "^27.0.1",
+    "setimmediate": "^1.0.5",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "typescript": "^4.2.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/$1"
+    }
   }
 }
