--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "msw": "^0.29.0",
     "next": "10.2.0",
     "next-page-tester": "^0.25.0",
     "next-redux-wrapper": "^6.0.2",
