--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.4",
+    "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.5",
     "@storybook/addon-actions": "^6.2.9",
     "@storybook/addon-essentials": "^6.2.9",
     "@storybook/addon-links": "^6.2.9",
@@ -52,24 +54,36 @@
     "@types/enzyme": "^3.10.8",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "@types/react-test-renderer": "^17.0.1",
     "@types/redux": "^3.6.0",
+    "@types/redux-mock-store": "^1.0.2",
     "@types/styled-components": "^5.1.9",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.0.2",
     "babel-loader": "^8.2.2",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-plugin-styled-components": "^1.12.0",
     "babel-preset-react-app": "^10.0.0",
     "enzyme": "^3.11.0",
-    "jest": "^27.0.1",
+    "fetch-mock": "^9.11.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^27.0.4",
+    "jest-styled-components": "^7.0.4",
+    "jest-svg-transformer": "^1.0.0",
+    "jest-transform-stub": "^2.0.0",
     "react-docgen-typescript-loader": "^3.7.2",
+    "redux-mock-store": "^1.5.4",
     "setimmediate": "^1.0.5",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "storybook-svgr-react-component": "^1.0.1",
+    "svg-jest": "^1.0.1",
     "typescript": "^4.2.4"
   },
   "jest": {
     "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/$1"
+      "^@/(.*)$": "<rootDir>/$1",
+      "^.+\\.svg$": "<rootDir>/src/__test__/__mocks__/svgMock.js"
     }
   }
 }
