--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "cross-env NODE_ENV=development next dev",
+    "build": "cross-env NODE_ENV=production next build",
     "start": "next start",
     "storybook": "start-storybook -s ./public, ./static -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest --watchAll"
+    "test": "cross-env NODE_ENV=test jest --watchAll --env=jsdom"
   },
   "dependencies": {
+    "@redux-saga/testing-utils": "^1.1.3",
     "@reduxjs/toolkit": "^1.5.1",
     "@typescript-eslint/eslint-plugin": "^4.22.1",
     "@typescript-eslint/parser": "^4.22.1",
@@ -75,6 +76,7 @@
     "jest-transform-stub": "^2.0.0",
     "react-docgen-typescript-loader": "^3.7.2",
     "redux-mock-store": "^1.5.4",
+    "redux-saga-test-plan": "^4.0.1",
     "setimmediate": "^1.0.5",
     "storybook-addon-styled-component-theme": "^2.0.0",
     "storybook-svgr-react-component": "^1.0.1",
