--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^2.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
     "redux": "^4.1.0",
@@ -56,6 +57,7 @@
     "@types/enzyme": "^3.10.8",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
+    "@types/react-modal": "^3.12.0",
     "@types/react-test-renderer": "^17.0.1",
     "@types/redux": "^3.6.0",
     "@types/redux-mock-store": "^1.0.2",
