--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.23.2",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "http-proxy-middleware": "^2.0.1",
+    "jsonwebtoken": "^8.5.1",
     "msw": "^0.29.0",
     "next": "10.2.0",
     "next-page-tester": "^0.25.0",
     "next-redux-wrapper": "^6.0.2",
     "prettier": "^2.3.0",
     "react": "17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
+    "react-google-login": "^5.2.2",
     "react-modal": "^3.14.3",
     "react-redux": "^7.2.4",
     "react-test-renderer": "^17.0.2",
@@ -42,7 +46,8 @@
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.0",
-    "styled-reset": "^4.3.4"
+    "styled-reset": "^4.3.4",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.14.0",
@@ -55,6 +60,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^13.1.9",
     "@types/enzyme": "^3.10.8",
+    "@types/jsonwebtoken": "^8.5.4",
     "@types/node": "^15.0.2",
     "@types/react": "^17.0.5",
     "@types/react-modal": "^3.12.0",
